improve map parsing robustness and flood fill accuracy with unit tests